<resources>
    <string name="app_name">chitchat</string>
    <string name="chats">Chats</string>
    <string name="groups">Groups</string>
    <string name="contacts">Contacts</string>
    <string name="login_image">login_image</string>
    <string name="email">Email..</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login_with_phone">Login with Phone</string>
    <string name="need_new_account">Need new account ?</string>
    <string name="phone_no">Phone NO.</string>
    <string name="register_image">register_image</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="or">Or</string>
    <string name="find_friends">Find Friends</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="username">Username</string>
    <string name="status">status</string>
    <string name="update">Update</string>
    <string name="create_groups">Create Groups</string>
    <string name="send">send</string>
    <string name="message">message</string>
    <string name="send_otp">send OTP</string>
    <string name="phone_number">Phone number</string>
    <string name="otp">OTP</string>
    <string name="verify">verify</string>
    <string name="hey_i_am_using_chitchat">Hey I am Using Chitchat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>