<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


        <ImageView
            android:id="@+id/register_image"
            android:layout_width="match_parent"
            android:layout_height="278dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-7dp"
            android:layout_marginTop="-19dp"
            android:contentDescription="@string/register_image"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/signup_photo" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_image"
            android:layout_marginStart="8mm"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="8mm"
            android:background="@drawable/inputs"
            android:drawableStart="@drawable/email"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="4dp"
            tools:ignore="InOrMmUsage" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_email"
            android:layout_marginStart="8mm"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8mm"
            android:background="@drawable/inputs"
            android:drawableStart="@drawable/password"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="4dp"
            tools:ignore="InOrMmUsage" />


        <Button
            android:id="@+id/register_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_password"
            android:layout_marginStart="100dp"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/buttons"
            android:onClick="createAccount"
            android:text="@string/create_account" />

        <TextView
            android:id="@+id/instruction_to_already_have_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_button"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="5dp"
            android:background="@color/green"
            android:gravity="center_horizontal"
            android:onClick="alreadyHaveAccount"
            android:text="@string/already_have_an_account"
            android:textColor="#090909"
            android:textSize="17sp" />

</RelativeLayout>