<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="297dp"
        android:layout_height="278dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/profile_image"
        app:civ_border_color="#E33427"
        app:civ_border_width="5dp"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="79dp" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:layout_marginStart="90dp"
        android:layout_marginTop="54dp"
        android:autofillHints=""
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/edit_profile"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/user_status"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:layout_marginStart="90dp"
        android:layout_marginTop="120dp"
        android:autofillHints=""
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/edit_status"
        android:ems="10"
        android:hint="@string/status"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_status"
        android:layout_marginStart="135dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttons"
        android:onClick="updateProfile"
        android:text="@string/update" />

</RelativeLayout>