<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|fill"
    tools:context=".phoneLoginActivity">

    <EditText
        android:id="@+id/phone"
        android:layout_width="258dp"
        android:layout_height="57dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="70dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/send_otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205" />

    <TextView
        android:id="@+id/send_otp"
        android:layout_width="174dp"
        android:layout_height="41dp"
        android:layout_marginStart="107dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="236dp"
        android:background="@drawable/buttons"
        android:gravity="center"
        android:onClick="sendOtp"
        android:text="@string/send_otp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="89dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/otp"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/send_otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/time"
        android:layout_width="99dp"
        android:layout_height="34dp"
        android:layout_marginStart="178dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="192dp"
        android:layout_marginBottom="152dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_otp" />

</androidx.constraintlayout.widget.ConstraintLayout>